fixed - shiffted menu was still in page flow causing content to shift / done

--- a/assets/components/menu/menu.scss
+++ b/assets/components/menu/menu.scss
@@ -7,14 +7,12 @@ Styles for Mobile navigation
 .nav {
   // mobile menu button
   &__button{
-    left: 10px;
-    top: 10px;
-    //position: fixed;
+    width:48px;
     font-size: 2rem;
     color: #fff;
     background-color: #222;
     border-radius: 50%;
-    padding: 0 5px;
+    padding: 5px 7px;
     &__icon{
       cursor: pointer;
     }
