--- a/assets/styles/puzzleGame.scss
+++ b/assets/styles/puzzleGame.scss
@@ -3,6 +3,7 @@ body {
 }
 
 .puzzle{
+  margin: 0 auto;
   width:240px;
   background-color: #AAAAAA;
 }
